# HardwareRenderEngine

./: .gitignore  CMakeLists.txt  main.cpp  requirement.txt
buildTool/: macro.cmake
renderCore/: CMakeLists.txt  renderPass.cpp
renderCore/include/: Light.h  camera.h  mesh.h  model.h  renderPass.h
renderCore/shader/phong/: fs.glsl
thirdPart/: CMakeLists.txt
thirdPart/GL/: CMakeLists.txt
thirdPart/GL/include/glad/: glad.h
thirdPart/GL/src/: glad.c
thirdPart/imgui/: CMakeLists.txt
thirdPart/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
